new project porten shop

--- a/udemy-uber-project/src/sass/_general.sass
+++ b/udemy-uber-project/src/sass/_general.sass
@@ -24,15 +24,15 @@ header
 
     &_link
         font-weight: 300
-        font-size: 15px
+        font-size: 18px
         line-height: 15px
         align-items: center
         color: $white-color
-        text-decoration: none
+        text-decoration: none 
 
     &_item
         border-right: 2px dotted black
-        padding-right: 45px
+        padding-right: 30~px
         &:last-child
             border-right: none
 
