--- a/porten-shop-project/src/sass/style.sass
+++ b/porten-shop-project/src/sass/style.sass
@@ -9,393 +9,12 @@ body
     width: 1200px
     margin: 0 auto
 
-// header 
-
-.header
-    display: flex
-    justify-content: space-between
-    height: 44px
-    &_info
-        display: flex
-        align-items: center
-        &_link
-            display: flex
-            align-items: center
-            color: #969696
-            margin-right: 15px
-            padding-right: 15px
-            border-right: 2px solid #969696
-            img
-                padding-right: 5px 
-            span
-                font-size: 12px
-    
-    &_log
-        display: flex
-        align-items: center
-        color: #969696
-        span
-            font-size: 12px
-            margin-left: 10px
-
-.nav 
-    width: 100%
-    height: 80px
-    margin: 0
-    padding: 0
-    background-color: #0f0f0f
-    &_block
-        height: 80px
-        display: flex
-        justify-content: space-between
-        align-items: center
-        &_link
-            display: flex
-            .block_item
-                width: 136px
-                height: 80px
-                display: flex
-                justify-content: center
-                align-items: center
-                margin-right: 25px
-                &_link
-                    width: 60px
-                    height: 80px
-                    display: flex
-                    justify-content: center
-                    align-items: center
-                &:hover
-                    background-color: #1f1f1f
-            span
-                font-weight: normal
-                font-size: 14px
-                text-transform: uppercase
-                color: #fff
-            
-// promo 
-
-.promo 
-    width: 100%
-    height: 810px
-    background: url('/src/img/bg/bg1.png') center (center / cover) no-repeat
-    display: flex
-    justify-content: center
-    align-items: center
-    &_block
-        margin: 0 auto
-        &_item
-            margin: 0 auto 
-            display: flex
-            justify-content: center
-            align-items: center
-            width: 320px
-            height: 320px
-            border: 5px solid #fff
-        &_text
-            margin: 0 auto
-            text-align: center
-            padding-top: 70px 
-            font-weight: normal
-            font-size: 16px
-            text-align: center
-            text-transform: uppercase
-            color: #fff
-
-
-// content 
-
-.content 
-    width: 100%
-    height: 730px
-    display: flex
-    &_season
-        width: 50%
-        height: 100%
-        background-color: #000
-        &_list
-            display: flex
-            justify-content: center
-            .item
-                text-align: center
-                color: #fff
-                .text
-                    margin-top: 25px
-            .block
-                width: 90%
-                height: 290px
-                background-color: #191b1c
-                display: flex
-                align-items: center
-                margin-left: 12px
-                padding-left: 5px                
-                padding-rigth: 10px                
-        &_title
-            text-align: center
-            margin: 0 auto
-            margin-top: 100px
-            font-family: 'Playfair Display', serif
-            font-weight: bold
-            font-size: 22px
-            text-align: center
-            text-transform: uppercase
-            color: #FFFFFF
-            .line
-                margin: 0 auto
-                width: 150px
-                height: 1px
-                background-color: #fff
-                margin-top: 50px
-                margin-bottom: 50px
-
-    &_catalog
-        position: relative
-        width: 50%
-        height: 100%
-        background: url('/src/img/bg/catalog_bg.png') center (center / cover) no-repeat
-    &_collection
-        position: absolute
-        top: 75%
-        left: 25%
-        transform: translateY(-50%)
-        text-align: center
-        font-family: Playfair Display
-        .text_block
-            font-weight: bold
-            font-size: 36px
-            text-align: center
-            text-transform: uppercase
-            color: #fff
-            letter-spacing: 0.5em
-        .btn_block
-            margin-top: 45px
-            background: none
-            color: #fff
-            width: 160px
-            height: 50px
-            border: 2px solid #fff
-            border-radius: 5px
-            font-size: 22px
-            letter-spacing: 0.1em
-            text-transform: uppercase
-            cursor: pointer
-            &:hover
-                background-color: #fff
-                color: #000
-                transition: .7s all
-
-// features   
-
-.features
-    width: 100%
-    height: 600px
-    display: flex
-    color: #fff
-    &_block
-        width: 50%
-        height: 100%
-        background: url('/src/img/bg/features_bg.png') center (center / cover) no-repeat
-    &_descr
-        width: 50%
-        height: 100%
-        display: flex
-        flex-direction: column
-        justify-content: center
-        align-items: center
-        &_title
-            text-align: center
-            text-transform: uppercase
-            font-size: 22px
-            letter-spacing: 0.5em
-        &_text
-            width: 500px
-            text-align: center
-            font-size: 14px
-        &_btn
-            margin-top: 45px
-            background: none
-            color: #fff
-            width: 370px
-            height: 50px
-            border: 2px solid #fff
-            border-radius: 5px
-            font-size: 22px
-            letter-spacing: 0.4em
-            text-transform: uppercase
-            cursor: pointer
-            &:hover
-                background-color: #fff
-                color: #000
-                transition: .7s all
-        .line
-            width: 200px
-            height: 1px
-            background-color: #fff
-            margin: 50px auto
-
-
-.title 
-    color: #fff
-    font-weight: bold
-    font-size: 36px
-    line-height: 48px
-    text-align: center
-    text-transform: uppercase
-    margin-top: 100px
-    letter-spacing: 0.5em
-    .line
-        width: 150px
-        height: 1px
-        background-color: #fff
-        margin: 50px auto
-
-.commercial 
-    display: flex
-    flex-wrap: wrap
-    margin: 0 auto
-    align-items: center
-    margin-bottom: 150px 
-    height: 700px
-    max-width: 1100px
-    &_item
-        text-align: center
-        color: #fff
-        width: 240px
-        margin-left: 20px
-        margin-top: 50px
-        cursor: pointer
-        &_block
-            background-color: #191b1c
-            width: 240px
-            height: 270px
-            img
-                margin-top: 17px 
-        &_text
-            margin-top: 10px
-
-
-// brands 
-
-.brands
-    height: 360px
-    width: 100%
-    background-color: #0f0f0f
-    display: flex
-    flex-direction: column 
-    align-items: center
-    h4
-        font-weight: bold
-        font-size: 36px
-        line-height: 48px
-        text-align: center
-        text-transform: uppercase
-        color: #fff
-    &_list
-        display: flex
-        justify-content: center
-        img
-            margin-right: 15px 
-    .line
-        width: 150px
-        height: 1px
-        background-color: #fff
-        margin: 50px auto
-
-
-// footer 
-
-.footer
-    width: 100%
-    height: 400px
-    background: url('/src/img/bg/footer_bg.png') center (center / cover) no-repeat
-    &_block
-        display: flex
-      
-    &_about
-        height: 100%
-        h4
-            font-weight: bold
-            font-size: 24px
-            line-height: 48px
-            text-transform: uppercase
-            letter-spacing: 0.4em
-            color: #fff
-        &_box
-            width: 350px
-            height: 140px
-            color: #fff
-
-    &_category
-        width: 350px
-        height: 100%
-        margin-left: 15px
-        h4
-            font-weight: bold
-            font-size: 24px
-            line-height: 48px
-            text-transform: uppercase
-            letter-spacing: 0.4em
-            color: #fff
-            margin-left: 30px
-        &_list
-            display: flex
-            max-width: 340px
-            flex-wrap: wrap
-            .item
-                background-color: #0f0f0f
-                margin-left: 28px
-                margin-top: 10px 
-                height: 41px
-                width: auto
-                display: flex
-                align-items: center
-                padding: 0px 10px
-                cursor: pointer
-                span
-                    font-weight: normal
-                    font-size: 14px
-                    color: #D0D0D0
-            
-    &_link
-        width: 500px
-        h4
-            font-weight: bold
-            font-size: 24px
-            line-height: 48px
-            text-transform: uppercase
-            letter-spacing: 0.4em
-            color: #fff
-        span
-            font-weight: normal
-            font-size: 14px
-            color: #fff
-
-        &_box
-            margin-top: 38px
-            display: flex
-            align-items: center
-            input
-                width: 210px
-                height: 42px
-                background: rgba(255, 255, 255, 0.4)
-            button
-                margin-top: 2px
-                width: 140px
-                height: 47px
-                background: #0f0f0f
-                font-weight: normal
-                font-size: 14px
-                letter-spacing: 0.05em
-                text-transform: uppercase
-                color: #fff
-                border: 3px solid #0f0f0f
-
-.subfooter 
-    width: 100%
-    height: 50px
-    display: flex
-    justify-content: space-around
-    align-items: center
-    color: #fff
-    .info
-        display: flex
-        flex-direction: column
+@import "variables"
+@import "header"
+@import "nav"
+@import "promo"
+@import "footer"
+@import "brands"
+@import "content"
+@import "features"
+@import "commercial"
