--- a/porten-shop-project/src/sass/_promo.sass
+++ b/porten-shop-project/src/sass/_promo.sass
@@ -1,7 +1,7 @@
 .promo 
     width: 100%
     height: 810px
-    background: url('/src/img/bg/bg1.png') center (center / cover) no-repeat
+    background: url('../img/bg/bg1.png') center (center / cover) no-repeat
     display: flex
     justify-content: center
     align-items: center
