--- a/porten-shop-project/src/sass/_content.sass
+++ b/porten-shop-project/src/sass/_content.sass
@@ -45,7 +45,7 @@
         position: relative
         width: 50%
         height: 100%
-        background: url('/src/img/bg/catalog_bg.png') center (center / cover) no-repeat
+        background: url('../img/bg/catalog_bg.png') center (center / cover) no-repeat
     &_collection
         position: absolute
         top: 75%
