--- a/porten-shop-project/src/sass/_features.sass
+++ b/porten-shop-project/src/sass/_features.sass
@@ -6,7 +6,7 @@
     &_block
         width: 50%
         height: 100%
-        background: url('/src/img/bg/features_bg.png') center (center / cover) no-repeat
+        background: url('../img/bg/features_bg.png') center (center / cover) no-repeat
     &_descr
         width: 50%
         height: 100%
