--- a/porten-shop-project/src/sass/_footer.sass
+++ b/porten-shop-project/src/sass/_footer.sass
@@ -1,7 +1,7 @@
 .footer
     width: 100%
     height: 400px
-    background: url('/src/img/bg/footer_bg.png') center (center / cover) no-repeat
+    background: url('../img/bg/footer_bg.png') center (center / cover) no-repeat
     &_block
         display: flex
       
