--- a/porten-shop-project/src/sass/_footer.sass
+++ b/porten-shop-project/src/sass/_footer.sass
@@ -49,7 +49,10 @@
                     font-weight: normal
                     font-size: 14px
                     color: $gray-text
-            
+                &:hover
+                    background-color: $gray
+                    span
+                        color: $black
     &_link
         width: 500px
         h4
