--- a/porten-shop-project/src/sass/_footer.sass
+++ b/porten-shop-project/src/sass/_footer.sass
@@ -4,6 +4,8 @@
     background: url('../img/bg/footer_bg.png') center (center / cover) no-repeat
     &_block
         display: flex
+        justify-content: center
+        padding-top: 40px
       
     &_about
         height: 100%
