--- a/porten-shop-project/src/sass/_header.sass
+++ b/porten-shop-project/src/sass/_header.sass
@@ -5,6 +5,7 @@
     &_info
         display: flex
         align-items: center
+        margin-left: 20px
         &_link
             display: flex
             align-items: center
@@ -21,6 +22,7 @@
         display: flex
         align-items: center
         color: $gray
+        margin-right: 20px
         span
             font-size: 12px
             margin-left: 10px
