--- a/porten-shop-project/src/sass/_content.sass
+++ b/porten-shop-project/src/sass/_content.sass
@@ -1,10 +1,10 @@
 .content 
     width: 100%
-    height: 730px
+    height: 650px
     display: flex
     &_season
         width: 50%
-        height: 100%
+        height: 650px
         background-color: $black
         &_list
             display: flex
@@ -15,18 +15,19 @@
                 .text
                     margin-top: 25px
             .block
-                width: 90%
-                height: 290px
+                width: 190px
+                height: 250px
                 background-color: $dark-bg
                 display: flex
+                justify-content: center
                 align-items: center
-                margin-left: 12px
-                padding-left: 5px                
-                padding-rigth: 10px                
+                margin-left: 10px                       
+                img
+                    width: 200px           
         &_title
             text-align: center
             margin: 0 auto
-            margin-top: 100px
+            margin-top: 75px
             font-family: 'Playfair Display', serif
             font-weight: bold
             font-size: 22px
@@ -44,18 +45,19 @@
     &_catalog
         position: relative
         width: 50%
-        height: 100%
+        height: 650px
         background: url('../img/bg/catalog_bg.png') center (center / cover) no-repeat
     &_collection
         position: absolute
-        top: 75%
-        left: 25%
-        transform: translateY(-50%)
+        width: 450px
+        top: 60%
+        left: 50%
+        transform: translateX(-50%)
         text-align: center
         font-family: Playfair Display
         .text_block
             font-weight: bold
-            font-size: 36px
+            font-size: 30px
             text-align: center
             text-transform: uppercase
             color: $white
