--- a/porten-shop-project/src/sass/_nav.sass
+++ b/porten-shop-project/src/sass/_nav.sass
@@ -9,6 +9,7 @@
         display: flex
         justify-content: space-between
         align-items: center
+        margin-left: 20px
         &_link
             display: flex
             .block_item
