--- a/porten-shop-project/src/sass/brands.sass
+++ b/porten-shop-project/src/sass/brands.sass
@@ -1,7 +1,7 @@
 .brands
     height: 360px
     width: 100%
-    background-color: $dark
+    background-color: #0f0f0f
     display: flex
     flex-direction: column 
     align-items: center
@@ -11,7 +11,7 @@
         line-height: 48px
         text-align: center
         text-transform: uppercase
-        color: $white
+        color: #fff
     &_list
         display: flex
         justify-content: center
@@ -20,5 +20,5 @@
     .line
         width: 150px
         height: 1px
-        background-color: $white
+        background-color: #fff
         margin: 50px auto
