--- a/porten-shop-project/src/sass/style.sass
+++ b/porten-shop-project/src/sass/style.sass
@@ -6,7 +6,7 @@ body
     font-family: 'PT Sans', sans-serif
 
 .container
-    width: 1200px
+    width: 100%
     margin: 0 auto
 
 @import "variables"
@@ -18,3 +18,5 @@ body
 @import "content"
 @import "features"
 @import "commercial"
+@import "hamburger"
+@import 'media'
