--- a/porten-shop-project/src/sass/_media.sass
+++ b/porten-shop-project/src/sass/_media.sass
@@ -178,6 +178,9 @@
     .header
         &_info
             margin-left: 28px
+            &_link
+                span
+                    font-size: 11px
         &_log
             margin-right: 20px
 
@@ -219,7 +222,7 @@
                     position: absolute
                     top: 50%
                     transform: translateY(-50%)
-                    background-color: #000000a4
+                    background-color: #000000b8
                     height: 100%
                     width: 50%
                     padding-top: 50%
@@ -227,7 +230,7 @@
                     transition: .6s all
                     .block
                         &_item
-                            width: 270px
+                            width: 100%
                             margin: 0 auto
                             span
                                 font-size: 20px
@@ -266,10 +269,24 @@
                 width: 160px
 
 @media (max-width: 575px)
+    .header
+        &_info
+            &_link
+                border-right: none
+                &:nth-child(2)
+                    display: none
+                &:nth-child(3)
+                    display: none
+                span
+                    font-size: 14px
+            
     .content
         height: 870px
         &_season
             height: 650px
+
+    .hamburger
+        margin-right: 20px
 
     .features
         &_descr
@@ -321,3 +338,55 @@
         margin-bottom: 195px
         &_item
             margin-left: 49px
+
+@media (max-width: 480px)
+    .content 
+        height: 757px
+        &_season
+            &_title
+                h2
+                    font-size: 28px
+            &_list
+                .block
+                    width: 90%
+                    img
+                        width: 125px
+                .item
+                    .text
+                        width: 90px
+                        margin-bottom: 20px
+                        margin-left: 10px
+        &_catalog
+            height: 80%
+
+    .features
+        &_descr
+            &_title
+                font-size: 17px
+                .line
+                    width: 150px
+
+    .footer
+        &_link
+            &_box
+                display: flex
+                flex-direction: column
+                align-items: flex-end
+                margin-right: 10px
+                input
+                    width: 160px
+                button
+                    margin-top: 10px
+                    width: 120px
+                    font-size: 13px
+                    height: 40px
+
+        &_category
+            &_list
+                margin-top: -10px
+        
+    .nav
+        &_block
+            &_link
+                &_active
+                    width: 60%
