--- a/porten-shop-project/src/components/brands/Brands.sass
+++ b/porten-shop-project/src/components/brands/Brands.sass
@@ -22,3 +22,31 @@
         height: 1px
         background-color: #fff
         margin: 50px auto
+
+@media (max-width: 1027px) 
+    .brands
+        margin-top: 320px
+        img
+            width: 230px
+
+@media (max-width: 991px)
+    .brands
+        margin-top: 320px
+        img
+            width: 180px
+
+@media (max-width: 770px)   
+    .brands
+        margin-top: 490px
+        &_list
+            flex-wrap: wrap
+            img
+                width: 160px
+
+@media (max-width: 575px)
+    .brands
+        margin-top: 190px
+
+@media (max-width: 480px)
+    .brands
+        height: 450px
