--- a/porten-shop-project/src/components/promo/Promo.sass
+++ b/porten-shop-project/src/components/promo/Promo.sass
@@ -1,7 +1,11 @@
+.container
+    width: 100%
+    margin: 0 auto
+
 .promo 
     width: 100%
     height: 810px
-    background: url('../img/bg/bg1.png') center (center / cover) no-repeat
+    background: url('../../img/bg/bg1.png') center (center / cover) no-repeat
     display: flex
     justify-content: center
     align-items: center
@@ -14,7 +18,7 @@
             align-items: center
             width: 320px
             height: 320px
-            border: 5px solid $white
+            border: 5px solid #fff
         &_text
             margin: 0 auto
             text-align: center
@@ -23,4 +27,4 @@
             font-size: 16px
             text-align: center
             text-transform: uppercase
-            color: $white
+            color: #fff
